plugins {
    id 'java'
    id 'org.jetbrains.intellij.platform' version '2.16.0'
}

group = "com.swissas.tala"
version = "1.8.6"

repositories {
    mavenCentral()

    intellijPlatform {
        defaultRepositories()
    }
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.test {
    useJUnitPlatform()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.mockito:mockito-core:4.5.1'
    implementation  "org.jsoup:jsoup:1.15.3"
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation  "javax.mail:mail:1.4.7"
    implementation 'info.debatty:java-string-similarity:2.0.0'
    intellijPlatform {
        intellijIdea("2026.1.2")
        bundledPlugin 'com.intellij.java'
        bundledPlugin 'com.intellij.properties'
//        bundledPlugin 'Subversion'
        bundledPlugin 'Git4Idea'
    }
}
intellijPlatform  {
    projectName = "Swiss-AS Dev-Tools"
    buildSearchableOptions = true
    autoReload = true
    

    pluginConfiguration {
        id = "swiss-as-dev-tool"
        name = "Swiss-AS Dev-Tools"
        version = "1.8.6"
        ideaVersion {
            sinceBuild = "261"
        }

       
        vendor {
            name = "Alain Tavan"
            email = "alain57@gmail.com"
            url = "https://github.com/alain57/swissas-dev-tools"
        }
        
        changeNotes = """
<b>V1.8.6</b><pre>update project with latest gradle, latest IntelliJ gradle plugin, 
get rid of some exception and make the plugin better work with newer IJ
refactor the save action and traffic light code to be more robust and prevent some exception</pre>
</pre>
<b>V1.8.5</b><pre>Fix broken traffic light refresh with new Intellij UI
Update to newest JSOUP to prevent XSS vulnerability
</pre>
<b>V1.8.4</b><pre>Prevent exception when no sas warning exist for the team
Fix broken picture
update some libraries to latest version
Updated the build.gradle to be compliant with latest maven/jetbrains intellij plugin</pre>
<b>V1.8.3</b><pre>reduce some exception and correct some issues in the SAS warning panel</pre>
<b>V1.8.2</b><pre>an employee got a new 4LC what is not the normal process :/ and this generated a duplicate key exception breaking the plugin for all users :/
Use up to date JSoup as there is a critical security issue</pre>
<b>V1.8.1</b><pre>Allow 2LC as a new coworker had such letter code</pre>
"""
    }

    publishing {
        host = ""
        token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
        channels = ["default"]
        ideServices = false
        hidden = false
    }

}
